--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -3,7 +3,7 @@
 
 <html>
 <head>
-    <title>React App</title>
+    <title>NeoDash - Neo4j Dashboard Builder</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
      <link href="materialize/css/materialize.min.css" rel="stylesheet" type="text/css" media="screen"/>
      <link href="style.css" rel="stylesheet" type="text/css" media="screen"/>
