--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
      <link href="materialize/css/materialize.min.css" rel="stylesheet" type="text/css" media="screen"/>
      <link href="style.css" rel="stylesheet" type="text/css" media="screen"/>
+    <link rel="manifest" href="manifest.json">
+    <link rel="shortcut icon" href="favicon.ico">
 </head>
 
 <body>
