--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>NeoDash - Neo4j Dashboard Builder</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
      <link href="materialize/css/materialize.min.css" rel="stylesheet" type="text/css" media="screen"/>
+     <link href="leaflet/css/leaflet.css" rel="stylesheet" type="text/css" media="screen"/>
      <link href="style.css" rel="stylesheet" type="text/css" media="screen"/>
     <link rel="manifest" href="manifest.json">
     <link rel="shortcut icon" href="favicon.ico">
