Added Neo4j Desktop integration

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
     <!-- <link rel="icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&amp;display=swap"/>
     <link rel="stylesheet" href="style.css"/>
+    <link rel="manifest" href="manifest.json">
+    <link rel="shortcut icon" href="favicon.ico">
     <title>NeoDash - Neo4j Dashboard Builder</title>
     <!--
             manifest.json provides metadata used when your web app is installed on a
