Fixed example documentation with new styling

--- a/public/embed-test.html
+++ b/public/embed-test.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <p>I am an iFrame of the page located at <a href="http://neodash.graphapp.io/embed-test.html" target="_blank">http://neodash.graphapp.io/embed-test.html</a></p> 
+    <p>I am an iFrame of the page located at <a href="https://neodash.graphapp.io/embed-test.html" target="_blank">https://neodash.graphapp.io/embed-test.html</a></p> 
     <p>I'm embedded directly into a dashboard, and dynamically passed the user-made parameter selections.</p>
     <p>I will not refresh when selections are updated, but, I can see variables change.</p>
     <p>You can use me to embed external visualizations that are updated together with other charts.</p>
