Reverted back to old Docker config

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
 <body>
     <div id="root"></div>
     <noscript>Please enable JavaScript to view this site.</noscript>
-    <script src="%PUBLIC_URL%/bundle.js"></script>
+    <script src="bundle.js"></script>
 </body>
 
 </html>
