--- a/gallery/public/index.html
+++ b/gallery/public/index.html
@@ -25,6 +25,15 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>NeoDash Dashboard Gallery</title>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JQ8SZ0S4TK"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-JQ8SZ0S4TK');
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
