Clean up es-lint errors

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
             work correctly both with client-side routing and a non-root public URL.
             Learn how to configure a non-root public URL by running `yarn run build`.
         -->
+    <script src="/config/env-config.js"></script>
 </head>
 
 <body>
