Fixed issues with pointers to invalid css and png files

--- a/apps/neodash-editor/public/index.html
+++ b/apps/neodash-editor/public/index.html
@@ -9,6 +9,7 @@
     <!-- <link rel="icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&amp;display=swap"/>
     <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="PolygonStyle.css"/>
     <link rel="manifest" href="manifest.json">
     <link rel="shortcut icon" href="favicon.ico">
     <title>NeoDash - Neo4j Dashboard Builder</title>
