Fix for needle dropdowns not showing on modals

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
 </head>
 
 <body>
+    <div id="overlay"></div>
     <div id="root"></div>
     <noscript>Please enable JavaScript to view this site.</noscript>
     <script src="bundle.js"></script>
