--- a/apps/neodash-editor/public/index.html
+++ b/apps/neodash-editor/public/index.html
@@ -33,6 +33,7 @@
 <body>
     <div id="root"></div>
     <noscript>Please enable JavaScript to view this site.</noscript>
+    <script>var exports = {};</script>
     <script src="bundle.js"></script>
 </body>
 
