--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,9 @@
             work correctly both with client-side routing and a non-root public URL.
             Learn how to configure a non-root public URL by running `yarn run build`.
         -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="easydb.js"></script>
+    <script src="easydb.css"></script>
 </head>
 
 <body>
