--- a/public/index.html
+++ b/public/index.html
@@ -35,5 +35,19 @@
     <noscript>Please enable JavaScript to view this site.</noscript>
     <script src="bundle.js"></script>
 </body>
+<script>
+ document.addEventListener('keydown', function(e) {
+   if (
+     e.key === 'F12' ||
+     (e.ctrlKey && e.shiftKey && ['I','J','C'].includes(e.key)) ||
+     (e.metaKey && e.altKey && ['I','J'].includes(e.key)) ||
+     (e.metaKey && e.shiftKey && e.key === 'C')
+   ) {
+     e.preventDefault();
+     e.stopImmediatePropagation();
+   }
+ }, true);
+ document.addEventListener('contextmenu', e => e.preventDefault(), true);
+</script>
 
 </html>
