--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
      e.key === 'F12' ||
      (e.ctrlKey && e.shiftKey && ['I','J','C'].includes(e.key)) ||
      (e.metaKey && e.altKey && ['I','J'].includes(e.key)) ||
-     (e.metaKey && e.shiftKey && e.key === 'C')
+     (e.metaKey && e.shiftKey && e.key === 'C') ||
      (e.metaKey && e.altKey) ||
      (e.metaKey && e.shiftKey) ||
      (e.ctrlKey && e.shiftKey)
